    + Add an updated check for $"" based on Filippo's $'' patch.
  * Debbugs.pm:
    + Really fix the special-casing of the "archive" key in select() to
      get rid of an uninitialized value warning.
    + Check whether a SOAP call returned a valid value before attempting to
      call result() on it.
    + Produce more useful error messages on failure. (Closes: #496013)

 -- Patrick Schoenfeld <schoenfeld@debian.org>  Thu, 06 Nov 2008 13:39:09 +0100

devscripts (2.10.40) unstable; urgency=low

  [ Adam D. Barratt ]
  * bts:
    + Update the manpage to mention local caching in the description
      section and correct a typo. (Closes: #499397)
    + Accept a command consisting purely of a comment. (Closes: #501252)
  * cowpoke:
    + Update to new upstream version
      - Multiple architecture and distribution support.
      - Options are now specified using --option rather than being listed
        after the .dsc file.
      - There is now a --create option to allow new build roots to be
        easily created.
      - There are two new configuration file options BUILDD_DIST (the
        default distribution for which packages will be built) and
        DEBOOTSTRAP, allowing one to specify which of {c,}debootstrap
        should be used.
      - The RESULT_DIR configuration variable has been replaced by
        PBUILDER_BASE which points to pbuilder's base folder under which
        architecture and distribution directories will be created.
      - cowpoke.conf now supports per-arch and per-distribution options.
  * debchange:
    + Don't attempt to automatically determine if the current changelog is
      an NMU if an alternative changelog location was specified using the
      CHANGELOG environment variable.
    + Update the Ubuntu distribution list. Add jaunty and remove the
      no-longer supported warty, hoary, edgy and fiesty. Also add
      "-backports" as a supported "extension".
    + Modify the message produced by --closes to make it clearer that it 